--- a/Top_Das_Phones/src/app/content-card/content-card.component.html
+++ b/Top_Das_Phones/src/app/content-card/content-card.component.html
@@ -1,3 +1,7 @@
-<div *ngFor="let content of contentList.get">
-    <div [innerHTML]="contentList.getContent(contentList.get.indexOf(content))"></div>
+<div class="card">
+    <h1>{{content.title}}</h1>
+    <img src="{{content.imgURL}}" (click)="handleClick(content)">
+    <p>{{content.description}}</p>
+    <p>Creator: {{content.creator}}</p>
+    <p>Type: {{content.type}}</p>
 </div>
