--- a/Top_Das_Phones/src/app/content-card/content-card.component.scss
+++ b/Top_Das_Phones/src/app/content-card/content-card.component.scss
@@ -6,6 +6,7 @@
     margin-bottom: 15px;
     border: 1px solid gray;
     img{
+        width: 300px;
         max-width: 100%;
         cursor: pointer;
     }
