--- a/Top_Das_Phones/src/app/content-card/content-card.component.html
+++ b/Top_Das_Phones/src/app/content-card/content-card.component.html
@@ -1,6 +1,13 @@
 <div class="card">
     <h1>{{content.title}}</h1>
-    <img src="{{content.imgURL}}" (click)="handleClick(content)">
+
+    <div *ngIf="content.imgURL; else defaultImage">
+        <img  [src]="content.imgURL" alt="Default phone" (click)="handleClick(content)">
+    </div>
+    <ng-template #defaultImage>
+        <img [src]="defaultPhoneImage" alt="Default phone" (click)="handleClick(content)">
+    </ng-template>
+
     <p>{{content.description}}</p>
     <p>Creator: {{content.creator}}</p>
     <p>Type: {{content.type}}</p>
