applied directive as attribute on type and tags

--- a/Top_Das_Phones/src/app/content-card/content-card.component.html
+++ b/Top_Das_Phones/src/app/content-card/content-card.component.html
@@ -10,5 +10,8 @@
 
     <p>{{content.description}}</p>
     <p>Creator: {{content.creator}}</p>
-    <p>Type: {{content.type}}</p>
+    <p appHoverAffect [styleOnHover]="'underline'">Type: {{content.type}}</p>
+    <div> Tags: 
+        <span *ngFor="let tag of content.tags" appHoverAffect [styleOnTags]="'bold'">{{tag}}, </span>
+    </div>
 </div>
