--- a/Top_Das_Phones/src/app/content-list/content-list.component.html
+++ b/Top_Das_Phones/src/app/content-list/content-list.component.html
@@ -1,3 +1,4 @@
+<app-modify-content (onCreation)="addContent($event)" ></app-modify-content>
 <section class="searchForTitle">
     <div>
         <input type="text" [(ngModel)]="searchTitle">
