--- a/Top_Das_Phones/src/styles.scss
+++ b/Top_Das_Phones/src/styles.scss
@@ -1,3 +1,38 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$Top_Das_Phones-primary: mat.define-palette(mat.$indigo-palette);
+$Top_Das_Phones-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$Top_Das_Phones-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$Top_Das_Phones-theme: mat.define-light-theme((
+  color: (
+    primary: $Top_Das_Phones-primary,
+    accent: $Top_Das_Phones-accent,
+    warn: $Top_Das_Phones-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($Top_Das_Phones-theme);
+
 /* You can add global styles to this file, and also import other style files */
 img{
     max-width: 100%;
@@ -5,3 +40,5 @@ img{
 .card:first-child .card{
     border-width: 2px;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
