--- a/Top_Das_Phones/src/app/content-card/content-card.component.html
+++ b/Top_Das_Phones/src/app/content-card/content-card.component.html
@@ -1,17 +1,19 @@
-<div class="card">
-    <h1>{{content.title}}</h1>
-
-    <div *ngIf="content.imgURL; else defaultImage">
-        <img  [src]="content.imgURL" alt="Default phone" (click)="handleClick(content)">
-    </div>
-    <ng-template #defaultImage>
-        <img [src]="defaultPhoneImage" alt="Default phone" (click)="handleClick(content)">
-    </ng-template>
-
-    <p>{{content.description}}</p>
-    <p>Creator: {{content.creator}}</p>
-    <p appHoverAffect [styleOnHover]="'underline'">Type: {{content.type}}</p>
-    <div> Tags: 
-        <span *ngFor="let tag of content.tags" appHoverAffect [styleOnTags]="'bold'">{{tag}}, </span>
-    </div>
-</div>
+<mat-card class="card">
+    <mat-card-header>
+        <h1 [innerHTML]="content.title"></h1>
+    </mat-card-header>
+    <mat-card-content>
+        <p [innerHTML]="content.description"></p>
+        <p [innerHTML]="content.creator"></p>
+        <p [innerHTML]="content.type" appHoverAffect [styleOnHover]="'underline'"></p>
+        <div>
+            <span *ngFor="let tag of content.tags" appHoverAffect [styleOnTags]="'bold'">{{tag}}, </span>
+        </div>
+        <div *ngIf="content.imgURL; else noImage">
+            <img [src]="content.imgURL" (click)="handleClick(content)">
+        </div>
+        <ng-template #noImage>
+            <img mat-card-image [src]="defaultPhoneImage" (click)="handleClick(content)">
+        </ng-template>
+    </mat-card-content>
+</mat-card>
