--- a/Top_Das_Phones/src/app/content-list/content-list.component.html
+++ b/Top_Das_Phones/src/app/content-list/content-list.component.html
@@ -1,8 +1,10 @@
 <app-modify-content (onCreation)="addContent($event)" ></app-modify-content>
 <section class="searchForTitle">
     <div>
-        <input type="text" [(ngModel)]="searchTitle">
-        <button (click)="searchByTitle()">Search</button>
+        <mat-form-field>
+            <input matInput type="text" [(ngModel)]="searchTitle" placeholder="Search Title">
+        </mat-form-field>
+        <button mat-raised-button color="primary" (click)="searchByTitle()">Search</button>
     </div>
 
     <div *ngIf="titleFound !== null">
