--- a/Top_Das_Phones/src/app/modify-content/modify-content.component.html
+++ b/Top_Das_Phones/src/app/modify-content/modify-content.component.html
@@ -1,13 +1,2 @@
-<div>
-
-    Title: <br> <input type="text" [(ngModel)]="newContent.title"> <br> <br>
-    Description: <br> <input type="text" [(ngModel)]="newContent.description"> <br> <br>
-    Creator: <br> <input type="text" [(ngModel)]="newContent.creator"> <br> <br>
-    Image Link: <br> <input type="text" [(ngModel)]="newContent.imgURL"> <br> <br> 
-    Type: <br> <input type="text" [(ngModel)]="newContent.type"> <br> <br>
-
-    <div>
-        <button (click)="addContent()">Add Content</button>
-    </div>
-</div>
-<hr>
+<br> <button mat-raised-button color="primary" (click)="openDialog()">Add New Content</button> <br> <br>
+<mat-divider></mat-divider>
